--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,9 @@
                         <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8fkp4y" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
                         <div class="text--center fr-py-3w fr-px-5w">
                             <div class="fr-h6 text-title-blue-france">Pour les instructeurs</div>
-                            <p><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
-                            <div><strong>Philippe Pusic</strong>, Instructeur</div>
-                            <div>APM Métropole Bouche du Rhône</div>
+                            <p class="fr-px-2w"><strong>"L'outil a permis de simplifier le conventionnement en réduisant le temps consacré à la relecture des conventions APL."</strong></p>
+                            <div><strong>Philippe Pusic</strong>, Instructeur Aide à la Pierre </div>
+                            <div>Métropole Aix Marseille Provence</div>
                         </div>
                     </div>
                 </div>
