update: add new video retex bailleur

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,15 @@
                             <div>APM Métropole Bouche du Rhône</div>
                         </div>
                     </div>
+                    <div class="fr-col-lg-6 fr-col-12 fr-pr-4w">
+                        <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8frr91" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
+                        <div class="text--center fr-py-3w fr-px-5w">
+                            <div class="fr-h6 text-title-blue-france">Pour les bailleurs</div>
+                            <p><strong>"Je suis convaincue par APiLos, l'élaboration des conventions APL est beaucoup plus facile, beaucoup plus agréable et beaucoup moins chronophage."</strong></p>
+                            <div><strong>Sabine Réus</strong>, Assistante Financière PACA Corse</div>
+                            <div>CDC Habitat</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
