update: init form for convention missing

--- a/templates/conventions/avenant/search_for_avenant.html
+++ b/templates/conventions/avenant/search_for_avenant.html
@@ -13,19 +13,19 @@
                     <label class="fr-label" for="search_input">
                         Préciser un département
                     </label>
-                    <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement">
+                    <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement" required>
                 </div>
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                     <label class="fr-label" for="search_input">
                         Préciser une annee
                     </label>
-                    <input class="fr-input" placeholder="Ex : 2022" type="recherche" name="annee">
+                    <input class="fr-input" placeholder="Ex : 2022" type="recherche" name="annee" required>
                 </div>
                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                     <label class="fr-label" for="search_input">
                         Préciser un numéro
                     </label>
-                    <input class="fr-input" placeholder="Ex : 1234" type="recherche" name="num">
+                    <input class="fr-input" placeholder="Ex : 1234" type="recherche" name="num" required>
                 </div>
             </div>
             <div class="fr-col-1 fr-grid-row fr-grid-row--right">
