--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -16,6 +16,8 @@
         {% include "common/step_progressbar.html"%}
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
+                [FOYER] adaptation des annexes pour le cas des Foyers<br>
+
                 {% include "conventions/common/form_annexes.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
