--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -16,6 +16,8 @@
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
 
+                [FOYER] adaptation des logements pour le cas des Foyers<br>
+
                 {% if convention.is_avenant %}
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12 fr-mb-2w">
