--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -14,6 +14,56 @@
         {% include "common/step_progressbar.html"%}
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
+
+                Etape "Stationnnement" -> "Attribution" ?<br><br>
+                Conditions d'attribution et d'occupation permanente du logement-foyer<br>
+
+                En lieu et place des stationnements pour les [FOYER]:<br><br>
+
+                Avec des cases à cocher :<br>
+
+                Le gestionnaire s'engage à réserver le logement-foyer :
+                <ul><li>
+                    - soit aux personnes âgées seules ou en ménage dans l'établissement suivant :<br>
+                    [cocher la case prévue selon le type d'établissement retenu] : à cocher<br>
+                    □ Résidence autonomie.<br>
+                    □ établissement hébergeant des personnes âgées dépendantes (EHPAD).<br>
+                    □ Unité pour personnes désorientées (unités Alzheimer, ...).<br>
+                    □ Petite unité de vie (établissement de moins de 25 places autorisées).<br>
+                    □ Autres [préciser] ;<br>
+                </li></ul>
+                <ul><li>
+                    - soit aux personnes handicapées seules ou en ménage dans l'établissement suivant :<br>
+                    [cocher la case prévue selon le type d'établissement retenu] : à cocher<br>
+                    □ Foyer.<br>
+                    □ Foyer de vie ou occupationnel.<br>
+                    □ Foyer d'accueil médicalisé.<br>
+                    □ Autres [préciser] ;<br>
+                </li></ul>
+                <ul><li>
+                    - soit aux personnes en situation de perte d’autonomie liée à l’âge ou au handicap seules ou en ménage :<br>
+                    □ Habitat inclusif.<br>
+
+                    Si HABITAT INCLUSIF :<br>
+                    Conditions spécifiques d'accueil : à remplir
+                    Conditions d'admission dans l’habitat inclusif : à remplir
+                    Modalités d'attribution : à remplir
+                    Partenariats concourant à la mise en œuvre du projet de vie sociale et partagée mis en place : à remplir
+                    Activités proposées à l’ensemble des résidents dans le cadre du projet de vie sociale et partagée : à remplir
+
+
+                </li></ul><br>
+
+                ++ La part des locaux à usage privatif réservés par le préfet est fixée à ... pourcentage de réservation préfectorale définit dans chaque département et chaque programme %<br><br>
+
+                ++ les modalités de gestion de des réservations<br><br>
+
+                ++ les modalités de choix des personnes accueillies<br><br>
+
+                ++ Les prestations obligatoirement intégrées dans la redevance et non prises en compte pour le calcul de l'APL (non prises en compte au titre des charges récupérables):<br><em>Liste</em><br><br>
+
+                ++ Les prestations facultatives à la demande du résident facturées séparément :<br><em>Liste</em><br><br>
+
                 {% include "conventions/common/form_stationnements.html"%}
 
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
