--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -14,15 +14,9 @@
     name="{{upform.file.html_name}}"
     accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
 <div class="block--row-strech">
-    <button type="button" class="fr-btn fr-btn--secondary fr-icon-download-line fr-btn--icon-left" id='download_model'>
+    <a class="fr-btn fr-btn--secondary fr-icon-download-line fr-btn--icon-left" href="{% url 'conventions:load_xlsx_model' file_type=file_type %}">
         Télécharger le modèle des {{ what }}
-    </button>
-    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-        document.addEventListener('DOMContentLoaded', function () {
-            document.getElementById('download_model')
-                .addEventListener('click', function(){ location.href="{% url 'conventions:load_xlsx_model' file_type=file_type %}" });
-        });
-    </script>
+    </a>
 
     <div class="fr-mx-2w">Puis</div>
 
