--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -109,7 +109,7 @@
                         </div>
                         {% include "common/form/input_upload.html" with form_input=form.reference_cadastrale form_input_files=form.reference_cadastrale_files object_name='programme' object_uuid=convention.programme.uuid image_only=True file_list=convention.programme.reference_cadastrale|get_files_from_textfiles object_field="programme__reference_cadastrale__"|add:form.uuid.value %}
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
-                            {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='cadastre' upform=upform  what="références cadastrales"%}
+                            {% include "common/form/download_upload_form.html" with file_type='cadastre' upform=upform  what="références cadastrales"%}
                             <hr class="fr-col-12 fr-my-3w">
                         </div>
 
