--- a/templates/conventions/common/form_logements.html
+++ b/templates/conventions/common/form_logements.html
@@ -5,7 +5,7 @@
 
         <h4>Logements associés à la convention</h4>
         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
-            {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements' upform=upform what='logements'%}
+            {% include "common/form/download_upload_form.html" with file_type='logements' upform=upform what='logements'%}
             <hr class="fr-col-12 fr-my-3w">
         </div>
 
