--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -28,7 +28,7 @@
                         <h4>Financement : Prêts & Subventions</h4>
 
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
-                            {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='financement' upform=upform  what='prêts' %}
+                            {% include "common/form/download_upload_form.html" with file_type='financement' upform=upform  what='prêts' %}
                             <hr class="fr-col-12 fr-my-3w">
                         </div>
 
