--- a/templates/settings/import_bailleur_users.html
+++ b/templates/settings/import_bailleur_users.html
@@ -19,6 +19,10 @@
                         {% csrf_token %}
 
                         <div class="fr-grid-row fr-grid-row--right fr-grid-row--middle">
+                            <a class="fr-btn fr-btn--secondary fr-icon-download-line fr-btn--icon-left" href="{% url 'conventions:load_xlsx_model' file_type='listing_bailleur' %}">
+                                Télécharger un fichier d'exemple
+                            </a>
+                            <p class="mx-4 my-0"> ou </p>
                             <input id="file-upload-lock" type="hidden" name="Upload" value="true" disabled="disabled" />
                             <input
                                 class="fileinput--hidden"
@@ -36,10 +40,6 @@
                                 Téléverser le fichier de listing bailleur
                             </button>
 
-                            <p class="mx-4 my-0"> ou </p>
-                            <a class="fr-btn fr-btn--md fr-btn--secondary fr-icon-download-line fr-btn--icon-left auto-upload-btn" href="{% static '/files/listing_bailleur.xlsx' %}" download="listing_bailleur">
-                                Télécharger un fichier d'exemple
-                            </a>
                         </div>
 
                         <hr class="fr-col-12 fr-my-3w">
@@ -51,7 +51,7 @@
                                         <p id="select-error-desc-error" class="fr-error-text">
                                             {{ error|escape }}
                                         </p>
-                                   {% endfor %}
+                                    {% endfor %}
                                 {% endfor %}
                             </div>
                         {% endif %}
@@ -70,23 +70,23 @@
                                 </thead>
                                 <tbody>
                                     {% for form_user_bailleur in formset %}
-                                    <tr>
-                                        <td>
-                                            {% include "common/form/input_text.html" with form_input=form_user_bailleur.first_name editable=True %}
-                                        </td>
-                                        <td>
-                                            {% include "common/form/input_text.html" with form_input=form_user_bailleur.last_name editable=True %}
-                                        </td>
-                                        <td>
-                                            {% include "common/form/input_text.html" with form_input=form_user_bailleur.username editable=True %}
-                                        </td>
-                                        <td>
-                                            {% include "common/form/input_select.html" with form_input=form_user_bailleur.bailleur enum=form_user_bailleur.fields.bailleur.queryset editable=True %}
-                                        </td>
-                                        <td>
-                                            {% include "common/form/input_text.html" with form_input=form_user_bailleur.email editable=True %}
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td>
+                                                {% include "common/form/input_text.html" with form_input=form_user_bailleur.first_name editable=True %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_text.html" with form_input=form_user_bailleur.last_name editable=True %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_text.html" with form_input=form_user_bailleur.username editable=True %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_select.html" with form_input=form_user_bailleur.bailleur enum=form_user_bailleur.fields.bailleur.queryset editable=True %}
+                                            </td>
+                                            <td>
+                                                {% include "common/form/input_text.html" with form_input=form_user_bailleur.email editable=True %}
+                                            </td>
+                                        </tr>
                                     {% endfor %}
                                 </tbody>
                             </table>
