--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="fr-col-12 fr-col-lg-6">
-                            <p class="fr-my-1w"><strong>Signataire de la convention</strong></p>
+                            <p class="fr-my-1w"><strong>Signataire de la convention</strong>{% if convention.programme.is_foyer %} (Propriétaire){% endif %}</p>
                             <div class="fr-ml-3w">
                                 {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
                                 <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
@@ -43,6 +43,30 @@
                         </div>
                     </div>
                 {% endwith %}
+                {% if convention.programme.is_foyer and convention.gestionnaire %}
+                    <div class="block--row-strech-1">
+
+                        <h4 class="fr-card__title">
+                            Gestionnaire
+                        </h4>
+                    </div>
+
+                    <div class="fr-grid-row fr-grid-row--gutters">
+                        <div class="fr-col-12 fr-col-lg-6">
+                            <div class="fr-mb-2w">
+                                <strong>{% include "common/display_field_if_exists.html" with value=convention.gestionnaire object_field="convention__gestionnaire__"|add:convention_uuid %}</strong>
+                            </div>
+                        </div>
+                        <div class="fr-col-12 fr-col-lg-6">
+                            <p class="fr-my-1w"><strong>Signataire du gestionnaire</strong></p>
+                            <div class="fr-ml-3w">
+                                {% include "common/display_field_if_exists.html" with value=convention.gestionnaire_signataire_nom object_field="convention__gestionnaire_signataire_nom__"|add:convention_uuid %}
+                                <em>{% include "common/display_field_if_exists.html" with value=convention.gestionnaire_signataire_fonction object_field="convention__gestionnaire_signataire_fonction__"|add:convention_uuid %}</em>
+                                {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.gestionnaire_signataire_date_deliberation object_field="convention__gestionnaire_signataire_date_deliberation__"|add:convention_uuid %}
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
