--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -115,42 +115,57 @@
                                                     <u>Comment déterminer ma date de fin de convention ?</u>
                                                 </summary>
                                                 <div class="fr-text--xs">
-                                                    <div>Année de signature de la convention + au moins la durée du prêt le plus long. <br/>Elle ne peut être inférieure à 9 ans. Spécificités pour le PLS comprise entre 15 et 40 ans, pour les opérations sans financement, supérieur à 9 ans. <br/>Si la convention est signée après le 30 juin, la durée de la convention à prendre en compte débute à l'année N+1.</div>
-                                                    <div><a href="https://docs.apilos.beta.gouv.fr/bailleurs-guide/comment-remplir-les-champs/financement" target="_blank" rel="noopener" class="fr-link fr-text--xs">Plus d’informations sur la date de fin de convention.</a></div>
+                                                    <div>
+                                                        {% if convention.financement == 'PLS' %}
+                                                            La convention bénéficie d'un finncement PLS, la durée de conventionnement doit-être comprise entre 15 et 40 ans<br>
+                                                        {% elif convention.financement == 'SANS_FINANCEMENT' %}
+                                                            La conventionne bénéficie pas de financement, la durée de convnetionnement doit-être supérieur à 9 ans.
+                                                        {% else %}
+                                                            Année de signature de la convention + au moins la durée du prêt le plus long. <br>
+                                                            Elle ne peut être inférieure à 9 ans.
+                                                            {% if not convention.programme.is_foyer %}
+                                                                Si la convention est signée après le 30 juin, la durée de la convention à prendre en compte débute à l'année N+1.</div>
+                                                            {% endif %}
+                                                        {% endif %}
+                                                        <div><a href="https://docs.apilos.beta.gouv.fr/bailleurs-guide/comment-remplir-les-champs/financement" target="_blank" rel="noopener" class="fr-link fr-text--xs">Plus d’informations sur la date de fin de convention.</a></div>
+                                                    </div>
+                                                </details>
+                                                {% include "common/help_field.html" with form_input=form.annee_fin_conventionnement helptext_visible=True %}
+                                            </label>
+                                            <div class="block--row-strech">
+                                                <div class="fr-mt-1w fr-mr-1w">
+                                                    {% if convention.programme.is_foyer %}
+                                                        <span>31&nbsp;/&nbsp;12&nbsp;/&nbsp;</span>
+                                                    {% else %}
+                                                        <span>30&nbsp;/&nbsp;06&nbsp;/&nbsp;</span>
+                                                    {% endif %}
                                                 </div>
-                                            </details>
-                                            {% include "common/help_field.html" with form_input=form.annee_fin_conventionnement helptext_visible=True %}
-                                        </label>
-                                        <div class="block--row-strech">
-                                            <div class="fr-mt-1w fr-mr-1w">
-                                                <span>30&nbsp;/&nbsp;06&nbsp;/&nbsp;</span>
-                                            </div>
-                                            <div class="block--row-strech-1">
-                                                {% include "common/form/input_select.html" with form_input=form.annee_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:form.uuid.value %}
+                                                <div class="block--row-strech-1">
+                                                    {% include "common/form/input_select.html" with form_input=form.annee_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:form.uuid.value %}
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" object_field="convention__fond_propre__"|add:form.uuid.value %}
+                                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                        {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" object_field="convention__fond_propre__"|add:form.uuid.value %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                {% include "common/required_fields_info.html" %}
-                <div class="form-button-footer fr-col-md-12  fr-py-5w">
-                    {% if editable %}
-                        {% include "common/button/next_and_save.html" %}
-                        {% if not convention.is_avenant %}
-                            {% include "common/button/previous.html" with precedent='conventions:edd' convention_uuid=convention.uuid %}
+                    {% include "common/required_fields_info.html" %}
+                    <div class="form-button-footer fr-col-md-12  fr-py-5w">
+                        {% if editable %}
+                            {% include "common/button/next_and_save.html" %}
+                            {% if not convention.is_avenant %}
+                                {% include "common/button/previous.html" with precedent='conventions:edd' convention_uuid=convention.uuid %}
+                            {% endif %}
+                        {% else %}
+                            {% include "common/button/noteditable_button.html"%}
                         {% endif %}
-                    {% else %}
-                        {% include "common/button/noteditable_button.html"%}
-                    {% endif %}
-                </div>
-            </form>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
 {% endblock %}
