--- a/templates/conventions/avenant/new_convention_for_avenant.html
+++ b/templates/conventions/avenant/new_convention_for_avenant.html
@@ -1,43 +1,46 @@
-<div class="fr-col-12 block--row-strech">
-    <h2>Informations générales</h2>
-    <p>Ici le formulaire de création</p>
-    <form method="post" action="">
-        {% csrf_token %}
+<div class="fr-container">
+    <div class="fr-col-12 fr-col-lg-6">
+
         <div class="fr-col-12">
-            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
-
-            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
-
-            {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
-
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                    {% include "common/form/input_number.html" with form_input=form.nb_logements mandatory_input=True %}
+            <h2>Informations générales</h2>
+            <p>Ici le formulaire de création</p>
+        </div>
+        <form method="post" action="">
+            {% csrf_token %}
+            <div class="fr-col-12">
+                {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
+                {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
+                {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                        {% include "common/form/input_text.html" with form_input=form.code_postal mandatory_input=True %}
+                    </div>
+                    <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                        {% include "common/form/input_text.html" with form_input=form.ville mandatory_input=True %}
+                    </div>
                 </div>
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                    {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
-                </div>
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                <div class="fr-col-12 fr-mb-2w">
                     {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True %}
                 </div>
-            </div>
-
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                    {% include "common/form/input_text.html" with form_input=form.code_postal mandatory_input=True %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                        {% include "common/form/input_number.html" with form_input=form.nb_logements mandatory_input=True %}
+                    </div>
+                    <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                        {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
+                    </div>
                 </div>
-                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                    {% include "common/form/input_text.html" with form_input=form.ville mandatory_input=True %}
+                <input id="id_statut" name="statut" value="SIGNEE" hidden>
+                <div class="fr-upload-group">
+                    <label class="fr-label" for="file-upload">Ajouter des fichiers
+                        <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf. Lorem ipsum dolor sit amet, consectetur adipiscing.</span>
+                    </label>
+                    <input class="fr-upload" type="file" id="file-upload" name="file-upload">
                 </div>
             </div>
-        </div>
-        <div class="form-button-footer fr-col-md-12 fr-py-5w">
-            {% include "common/button/next_and_save.html" %}
-            <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
-                Revenir à la liste des conventions
-            </a>
-        </div>
-
-    </form>
+            <div class="form-button-footer fr-py-5w">
+                {% include "common/button/next_and_save.html" %}
+            </div>
+        </form>
+    </div>
 </div>
-
