--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -22,13 +22,13 @@
                             {% if not CERBERE_AUTH %}
                                 <div class="fr-mr-3w">
                                     <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                        <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                        <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une convention
                                     </a>
                                 </div>
                             {% endif %}
                             <div>
                                 <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                    <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un nouvel avenant
+                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
                                 </a>
                             </div>
                         {% elif request|is_instructeur or request.user.is_superuser %}
@@ -52,7 +52,7 @@
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                         <div class="fr-my-5w">
                             <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>
                                 {% if request|is_instructeur %}
                                     Créer une nouvelle convention comme un bailleur
                                 {% else %}
