--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-    {% with programme_uuid=programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=lot.uuid|slugify %}
+    {% with programme_uuid=programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=lot.uuid|slugify ecolo_ref=convention.ecolo_reference %}
         <input type="hidden" id="convention_uuid" value="{{convention.uuid}}">
         <div class="fr-container-fluid ds_banner">
             {% include "conventions/common/form_header.html"%}
@@ -70,10 +70,16 @@
                     {% include "conventions/recapitulatif/bailleur.html"  with target_url='conventions:bailleur'%}
                     {% include "conventions/recapitulatif/operation.html" with target_url='conventions:programme'%}
                     {% include "conventions/recapitulatif/references_cadastrales.html"  with target_url='conventions:references_cadastrales'%}
-                    {% include "conventions/recapitulatif/edd.html"  with target_url='conventions:edd'%}
-                    {% include "conventions/recapitulatif/financement.html" with target_url='conventions:financement' %}
+                    {%  if not ecolo_ref %}
+                        {% include "conventions/recapitulatif/edd.html"  with target_url='conventions:edd'%}
+                        {% include "conventions/recapitulatif/financement.html" with target_url='conventions:financement' %}
+                    {% endif %}
                     {% include "conventions/recapitulatif/logements.html" with target_url='conventions:logements' %}
-                    {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:annexes' %}
+                    {%  if not ecolo_ref %}
+                        {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:annexes' %}
+                    {% else %}
+                        {% include "conventions/recapitulatif/pieces_jointes.html" %}
+                    {% endif %}
                     {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' %}
                     {% include "conventions/recapitulatif/comments.html" with target_url='conventions:comments' %}
                 {% endif %}
