--- a/templates/conventions/recapitulatif/pieces_jointes.html
+++ b/templates/conventions/recapitulatif/pieces_jointes.html
@@ -37,7 +37,10 @@
                                            href="{% url 'conventions:piece_jointe' piece_jointe_uuid=piece_jointe.uuid %}"
                                         >Consulter</a>
                                         {% if piece_jointe.type == 'CONVENTION' %}
-                                            <button class="fr-btn fr-btn--green fr-btn--sm fr-icon-checkbox-circle-fill" title="Définir comme document de convention">Définir comme document de convention</button>
+                                            <a class="fr-btn fr-btn--green fr-btn--sm fr-icon-checkbox-circle-fill"
+                                               title="Définir comme document de convention"
+                                               href="{% url 'conventions:piece_jointe_promote' piece_jointe_uuid=piece_jointe.uuid %}"
+                                            >Définir comme document de convention</a>
                                         {% endif %}
                                     </td>
                             </tr>
