Create display SPF info section in convention recapitulatif

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -92,6 +92,7 @@
                     {% include "conventions/actions/generate_convention.html" %}
                     {% include "conventions/actions/delete.html"%}
                     {% include "conventions/actions/instructeur_validation.html" %}
+                    {% include "conventions/actions/display_spf_info.html" %}
                     {% include "conventions/actions/display_resiliation_info.html" %}
                 </turbo-frame>
 
