--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -46,7 +46,7 @@
                             <tr id="convention_redirect_{{convention.uuid}}" class="clickable">
                                 <td>{{convention.programme.date_achevement_compile|date:"d/m/Y"|default_if_none:'-' }}</td>
                                 <td>{{convention.programme.nom}}</td>
-                                <td>{{convention.financement}}</td>
+                                <td>{{convention.lot.financement}}</td>
                                 <td>{{convention.programme.code_postal}}</td>
                                 <td>{{convention.programme.ville}}</td>
                                 <td>{{convention.lot.nb_logements}}</td>
