--- a/templates/conventions/avenant/search_for_avenant_result.html
+++ b/templates/conventions/avenant/search_for_avenant_result.html
@@ -5,20 +5,38 @@
 {% load static %}
 
 {% block content %}
-    {% if conventions %}
-        {% for convention in conventions %}
-            <strong>{{convention.programme.nom}}</strong><br/>
-            <strong>{{convention.programme.ville}}</strong>
-            <em>{{convention.programme.code_postal}}</em>
-            UUID : {{ convention.uuid }} <br/><br/>
-            {% if convention|display_create_avenant %}
-                <a class='fr-btn' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant</a>
-            {% else %}
-                Un avenant est déjà en cours
-            {% endif %}
-        {% endfor %}
-        <a class="fr-my-1w fr-link" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
-    {% else %}
-        {% include "conventions/avenant/new_convention_for_avenant.html" %}
-    {% endif %}
+    <div class="fr-container-fluid ds_banner">
+        <div class="fr-container fr-my-5w">
+            <div class="fr-col-12 fr-col-lg-6">
+                {% if conventions %}
+                    {% for convention in conventions %}
+                        <div class="fr-card fr-card--no-arrow fr-p-4w fr-mb-3w">
+                            <div class="fr-grid-row">
+                                <div class="fr-col-1 fr-my-auto"><span class="fr-icon-success-line apilos-icon-success fr-icon--lg" aria-hidden="true"></span></div>
+                                <div class="fr-col-7">
+                                    <div class="fr-mb-1w fr-text--bold">
+                                        {{convention.programme.nom}}
+                                    </div>
+                                    {{convention.programme.ville}} - <strong>{{ convention.lot.financement|default_if_none:'' }}</strong>
+                                </div>
+                                <div class="fr-col-4 apilos-text--italic">
+                                    {{convention.numero}}
+                                </div>
+                            </div>
+                        </div>
+                        {% if convention|display_create_avenant %}
+                            <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant</a>
+                        {% else %}
+                            <p>Un avenant est déjà en cours.
+                                <a class="fr-link fr-mb-5w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
+                            </p>
+                        {% endif %}
+                    {% endfor %}
+                    <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
+                {% else %}
+                    {% include "conventions/avenant/new_convention_for_avenant.html" %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
