fix some integration issues

--- a/templates/conventions/avenant/new_convention_for_avenant.html
+++ b/templates/conventions/avenant/new_convention_for_avenant.html
@@ -1,6 +1,7 @@
 <div class="fr-col-12">
     <h2>Informations générales</h2>
-    <p>Ici le formulaire de création</p>
+    <p>Nous n'avons pas trouvé de convention correspondant à votre recherche.</p>
+    <p>Pour créer votre avenant, merci de compléter ces quelques informations sur la convention originale.</p>
 </div>
 <form method="post" action="" enctype="multipart/form-data" >
     {% csrf_token %}
