--- a/templates/conventions/avenant/search_for_avenant_result.html
+++ b/templates/conventions/avenant/search_for_avenant_result.html
@@ -9,6 +9,8 @@
         <div class="fr-container fr-my-5w">
             <div class="fr-col-12 fr-col-lg-6">
                 {% if conventions %}
+                    <h2>Confirmez votre choix</h2>
+                    <p>Vous allez créer un avenant pour la convention suivante.</p>
                     {% for convention in conventions %}
                         <div class="fr-card fr-card--no-arrow fr-p-4w fr-mb-3w">
                             <div class="fr-grid-row">
@@ -24,16 +26,25 @@
                                 </div>
                             </div>
                         </div>
-                        {% if convention|display_create_avenant %}
-                            <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant
-                                <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span></a>
-                        {% else %}
-                            <p>Un avenant est déjà en cours.
-                                <a class="fr-link fr-mb-5w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
-                            </p>
-                        {% endif %}
+                        <div class="fr-grid-row">
+                            {% if convention|display_create_avenant %}
+                                <div class="fr-col-12 fr-col-lg-6">
+                                    <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant
+                                        <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span></a>
+                                </div>
+                            {% else %}
+                                <div class="fr-col-12 fr-col-lg-6">
+                                    <button class="fr-btn" disabled> Un avenant est déjà en cours.</button>
+                                    <div>
+                                        <a class="fr-link fr-text--sm fr-mb-5w fr-mt-1w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
+                                    </div>
+                                </div>
+                            {% endif %}
                     {% endfor %}
-                    <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
+                    <div class="fr-col-12 fr-col-lg-6">
+                        <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
+                    </div>
+                    </div>
                 {% else %}
                     {% include "conventions/avenant/new_convention_for_avenant.html" %}
                 {% endif %}
