--- a/templates/conventions/avenant/search_for_avenant_result.html
+++ b/templates/conventions/avenant/search_for_avenant_result.html
@@ -40,10 +40,10 @@
                                     </div>
                                 </div>
                             {% endif %}
+                        </div>
                     {% endfor %}
-                    <div class="fr-col-12 fr-col-lg-6">
+                    <div class="fr-col-12 fr-col-lg-6 fr-mt-2w">
                         <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
-                    </div>
                     </div>
                 {% else %}
                     {% include "conventions/avenant/new_convention_for_avenant.html" %}
