--- a/templates/conventions/attribution.html
+++ b/templates/conventions/attribution.html
@@ -4,7 +4,7 @@
 
 {% load custom_filters %}
 
-{% block page_title %}Annexes - APiLos{% endblock%}
+{% block page_title %}Attribution - APiLos{% endblock%}
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
