--- a/templates/conventions/common/form_attribution.html
+++ b/templates/conventions/common/form_attribution.html
@@ -11,36 +11,16 @@
     <div class="fr-col-md-12">
         <h3>Conditions d'attribution et d'occupation permanente du logement-foyer</h3>
 
-        {% comment %} <p>Le gestionnaire s'engage à réserver le logement-foyer :</p>
-            <h4>Soit aux personnes âgées seules ou en ménage dans l'établissement suivant :</h4>
-            <p>[cocher la case prévue selon le type d'établissement retenu] : à cocher</p>
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_autonomie object_field="convention__attribution_agees_autonomie__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_ephad object_field="convention__attribution_agees_ephad__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_desorientees object_field="convention__attribution_agees_desorientees__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_petite_unite object_field="convention__attribution_agees_petite_unite__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_autre object_field="convention__attribution_agees_autre__"|add:form.uuid.value %}
-            {% include "common/form/input_text.html" with form_input=form.attribution_agees_autre_detail object_field="convention__attribution_agees_autre_detail__"|add:form.uuid.value %}
-            <h4>Soit aux personnes handicapées seules ou en ménage dans l'établissement suivant :</h4>
-            [cocher la case prévue selon le type d'établissement retenu] : à cocher<br>
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer object_field="convention__attribution_handicapes_foyer__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer_de_vie object_field="convention__attribution_handicapes_foyer_de_vie__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer_medicalise object_field="convention__attribution_handicapes_foyer_medicalise__"|add:form.uuid.value %}
-            {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_autre object_field="convention__attribution_handicapes_autre__"|add:form.uuid.value %}
-            {% include "common/form/input_text.html" with form_input=form.attribution_handicapes_autre_detail object_field="convention__attribution_handicapes_autre_detail__"|add:form.uuid.value %}
-            <h4>Soit aux personnes en situation de perte d’autonomie liée à l’âge ou au handicap seules ou en ménage :</h4>
-            □ Habitat inclusif.<br>
-
-            Si HABITAT INCLUSIF :<br>
-            Conditions spécifiques d'accueil : à remplir
-            Conditions d'admission dans l’habitat inclusif : à remplir
-            Modalités d'attribution : à remplir
-            Partenariats concourant à la mise en œuvre du projet de vie sociale et partagée mis en place : à remplir
-            Activités proposées à l’ensemble des résidents dans le cadre du projet de vie sociale et partagée : à remplir {% endcomment %}
+        <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12 fr-mb-2w">
+                {% include "common/form/input_number.html" with display_inline=True form_input=form.attribution_reservation_prefectoral object_field="convention__attribution_reservation_prefectoral__"|add:form.uuid.value %}
+            </div>
+        </div>
 
         <div class="fr-form-group">
             <fieldset class="fr-fieldset">
                 <legend class="fr-fieldset__legend fr-text--regular" id='radio-hint-element-legend'>
-                    Le gestionnaire s'engage à réserver le logement-foyer :
+                    <h4>Le gestionnaire s'engage à réserver le logement-foyer :</h4>
                 </legend>
                 <div class="fr-fieldset__content">
                     <div class="fr-radio-group">
@@ -55,7 +35,6 @@
                         </label>
                     </div>
                     <div id="{{form.attribution_type.html_name}}-agees-details">
-                        <p>[cocher la case prévue selon le type d'établissement retenu] : à cocher</p>
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_autonomie object_field="convention__attribution_agees_autonomie__"|add:form.uuid.value %}
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_ephad object_field="convention__attribution_agees_ephad__"|add:form.uuid.value %}
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_agees_desorientees object_field="convention__attribution_agees_desorientees__"|add:form.uuid.value %}
@@ -74,7 +53,6 @@
                         </label>
                     </div>
                     <div id="{{form.attribution_type.html_name}}-handicapees-details">
-                        <p>[cocher la case prévue selon le type d'établissement retenu] : à cocher</p>
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer object_field="convention__attribution_handicapes_foyer__"|add:form.uuid.value %}
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer_de_vie object_field="convention__attribution_handicapes_foyer_de_vie__"|add:form.uuid.value %}
                         {% include "common/form/input_checkbox.html" with form_input=form.attribution_handicapes_foyer_medicalise object_field="convention__attribution_handicapes_foyer_medicalise__"|add:form.uuid.value %}
@@ -93,11 +71,11 @@
                         </label>
                     </div>
                     <div id="{{form.attribution_type.html_name}}-inclusif-details">
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_conditions_specifiques object_field="convention__attribution_inclusif_conditions_specifiques__"|add:form.uuid.value mandatory_input=True %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_conditions_admission object_field="convention__attribution_inclusif_conditions_admission__"|add:form.uuid.value mandatory_input=True %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_modalites_attribution object_field="convention__attribution_inclusif_modalites_attribution__"|add:form.uuid.value mandatory_input=True %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_partenariats object_field="convention__attribution_inclusif_partenariats__"|add:form.uuid.value mandatory_input=True %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value mandatory_input=True %}
+                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_conditions_specifiques helptext_visible=True object_field="convention__attribution_inclusif_conditions_specifiques__"|add:form.uuid.value mandatory_input=True %}
+                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_conditions_admission helptext_visible=True object_field="convention__attribution_inclusif_conditions_admission__"|add:form.uuid.value mandatory_input=True %}
+                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_modalites_attribution helptext_visible=True object_field="convention__attribution_inclusif_modalites_attribution__"|add:form.uuid.value mandatory_input=True %}
+                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_partenariats helptext_visible=True object_field="convention__attribution_inclusif_partenariats__"|add:form.uuid.value mandatory_input=True %}
+                        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites helptext_visible=True object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value mandatory_input=True %}
                     </div>
                 </div>
             </fieldset>
@@ -130,25 +108,12 @@
             });
         </script>
         <hr>
-        Part de réservations préfectorales<br>
-        ++ La part des locaux à usage privatif réservés par le préfet est fixée à ... pourcentage de réservation préfectorale définit dans chaque département et chaque programme %<br><br>
-        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value %}
 
-        Modalités de gestion des reservations<br>
-        ++ les modalités de gestion de des réservations<br>
-        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value %}
-
-        Modalités de choix des personnes accueillies<br>
-        ++ les modalités de choix des personnes accueillies<br>
-        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value %}
-
-        Prestation intégrées dans la redevance<br>
-        ++ Les prestations obligatoirement intégrées dans la redevance et non prises en compte pour le calcul de l'APL (non prises en compte au titre des charges récupérables):<br><em>Liste</em><br>
-        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value %}
-
-        Prestion facultatives
-        ++ Les prestations facultatives à la demande du résident facturées séparément :<br><em>Liste</em><br><br>
-        {% include "common/form/input_textarea.html" with form_input=form.attribution_inclusif_activites object_field="convention__attribution_inclusif_activites__"|add:form.uuid.value %}
+        <h4>Autres modalitées</h4>
+        {% include "common/form/input_textarea.html" with form_input=form.attribution_modalites_reservations helptext_visible=True object_field="convention__attribution_modalites_reservations__"|add:form.uuid.value %}
+        {% include "common/form/input_textarea.html" with form_input=form.attribution_modalites_choix_personnes helptext_visible=True object_field="convention__attribution_modalites_choix_personnes__"|add:form.uuid.value %}
+        {% include "common/form/input_textarea.html" with form_input=form.attribution_prestations_integrees helptext_visible=True is_list=True object_field="convention__attribution_prestations_integrees__"|add:form.uuid.value %}
+        {% include "common/form/input_textarea.html" with form_input=form.attribution_prestations_facultatives helptext_visible=True is_list=True object_field="convention__attribution_prestations_facultatives__"|add:form.uuid.value %}
 
     </div>
 </div>
