--- a/templates/common/help_field.html
+++ b/templates/common/help_field.html
@@ -1,3 +1,3 @@
-{% if form_input.help_text or mandatory_input %}
+{% if form_input.help_text %}
     <span class="fr-hint-text">{{ form_input.help_text }}</span>
 {% endif %}
